# ChangeLog for media-libs/faac
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/faac/ChangeLog,v 1.66 2008/11/30 11:08:27 ssuominen Exp $

  26 Nov 2007; Jeroen Roovers <jer@gentoo.org> faac-1.26-r1.ebuild:
  Stable for HPPA (bug #199973).

  23 Nov 2007; Markus Rothe <corsair@gentoo.org> faac-1.26-r1.ebuild:
  Stable on ppc64; bug #199973

  23 Nov 2007; Raúl Porcel <armin76@gentoo.org> faac-1.26-r1.ebuild:
  alpha/ia64/sparc stable wrt #199973

  22 Nov 2007; nixnut <nixnut@gentoo.org> faac-1.26-r1.ebuild:
  Stable on ppc wrt bug 199973

  22 Nov 2007; Dawid Węgliński <cla@gentoo.org> faac-1.26-r1.ebuild:
  Stable on x86 (bug #199973)

  22 Nov 2007; Samuli Suominen <drac@gentoo.org> faac-1.26-r1.ebuild:
  amd64 stable wrt #199973

*faac-1.26-r1 (25 Oct 2007)

  25 Oct 2007; Steve Dibb <beandog@gentoo.org> +faac-1.26-r1.ebuild:
  Drop unnecessary rdepend of libsndfile

  15 Oct 2007; Tom Gall <tgall@gentoo.org> faac-1.24.ebuild:
  stable on ppc64

  12 Oct 2007; Alexis Ballier <aballier@gentoo.org> faac-1.24.ebuild,
  faac-1.24-r2.ebuild:
  quote some variables

*faac-1.26 (12 Oct 2007)

  12 Oct 2007; Alexis Ballier <aballier@gentoo.org>
  +files/faac-1.26-external-libmp4v2.patch, +faac-1.26.ebuild:
  version bump

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> faac-1.25.ebuild:
  ppc. stable

  25 Jul 2007; Raúl Porcel <armin76@gentoo.org> faac-1.25.ebuild:
  alpha/ia64/x86 stable

  16 Jun 2007; Diego Pettenò <flameeyes@gentoo.org> faac-1.25.ebuild:
  Filter out -ftree-vectorize, it crashes mencoder. Reported by drizzt.

  22 Apr 2007; Raúl Porcel <armin76@gentoo.org> faac-1.24-r3.ebuild:
  ia64 stable

  16 Apr 2007; Markus Rothe <corsair@gentoo.org> faac-1.24-r3.ebuild:
  Stable on ppc64

  25 Mar 2007; Samuli Suominen <drac@gentoo.org> faac-1.25.ebuild:
  Replace recode with sed for bug 171373, thanks to Arfrever Frehtes Taifersar
  Arahesis.

*faac-1.25 (17 Mar 2007)
