@@ -9,6 +9,6 @@ DIST faac-1.25.tar.gz 386608 RMD160 63a884775081e3d9a66dffaab341ed10e73365b8 SHA
 DIST faac-1.26.tar.gz 400915 RMD160 40656b7b1a7c207373d7a1ba0167f220d9073ecd SHA1 5aad6d5a60107a5d6bf79654970168f498961b21 SHA256 4b48e2e22267e9260365c7bee4513bf13d262b8b13cf7f9504e9fa612b6aa951
 EBUILD faac-1.24-r4.ebuild 966 RMD160 4d8fe746024aac371ea6ee286de607f083fb3ef7 SHA1 28e2978c8764a2407c32375b64e2171f9ef3aca2 SHA256 b77f4d8351f8ae74172154b22c15706f5e43c4a3cb3d24e7a8793ecf2de5e354
 EBUILD faac-1.25.ebuild 1074 RMD160 9ba5bbbaf818cc196ee2f04a8bedd328199c6f4b SHA1 09d45caf93f7594f26a89ea5ae065c324b7148af SHA256 264a5f5fc2ebae2775d2e777ebb842b487a07294d8c1bb3b1ef70c0c158cdd9e
-EBUILD faac-1.26-r1.ebuild 1009 RMD160 2f2752b48ff9c4924e3e64adcae2421be496ce0c SHA1 a403a26dd00e37f3cfb790afb947914ad97c760d SHA256 87bacca70689e600027d94d830e67a2d1b414dbc4926fa50200bf1f895160a8e
-MISC ChangeLog 8327 RMD160 85a58688069e6bd9c473b834e8c9e41eff956b70 SHA1 8d25ec1c757d4b8090ccde6412d3b83a4c97ab9e SHA256 ea848d02928ef0715289d7622a0bc8c71a43e663c9474e4da0acd769284206ff
+EBUILD faac-1.26-r1.ebuild 1014 RMD160 c4d0ecfe852ec959bbfb3aacfe88153bcdb2d57d SHA1 79acc302371cca22c7b7a47d1c3b711f8cebf86f SHA256 e438589b656e2ed4a0bd53845f07d80034d7b256a9ac990cfd4e96ab0f8fda06
+MISC ChangeLog 8432 RMD160 ecab37b9a51a1b81b859825188b191fcd26ab07d SHA1 4d0af6557f1c3b0b66083dcdb40f5370441f1204 SHA256 d4c1cd4e4aac0b2ea82d8de1249d2bd33bb3d747de5b3ed1bf02e32697108346
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
