@@ -9,7 +9,7 @@ DIST openal-0.0.8.tar.gz 870671 RMD160 29368dbceea7cfd8b5c520b9e0f0cfdc7324e265 
 DIST openal-soft-1.5.304.tar.bz2 75067 RMD160 fa614b1aa39878e6d5e4ca71d67340e6a70acef2 SHA1 01d066a71f59faad8272f625637ea86edeced98f SHA256 7a82a2ab5ff8c21dc4d50330f1c700762b43a1524be389a7dbd6df9a2ff3464c
 DIST openal-soft-1.6.372.tar.bz2 77568 RMD160 2da52d8d70cd962901987b1103d30f838c7c27a0 SHA1 4369709733481e9b7270265bab543c1c8373f44a SHA256 f69b2ee7768b8b7eff324d9bc6044c903ab40ddc294c4d37d4ccb092adc7c8b8
 EBUILD openal-0.0.8-r2.ebuild 1453 RMD160 1d9f894c90ab4f85febf9672d57f429514e9aa07 SHA1 ea8eb594fb7bc4808dd327ec0d8e201c3814afc9 SHA256 d9270b9f48095ff8484f5197d1fc27b74d0af2bbf07e3dc222e06a98f45977e2
-EBUILD openal-1.5.304.ebuild 1071 RMD160 1c3c4b5cb6aee0c65c41a1f81e0108af6b6f9fd5 SHA1 3dd9dc07a1a97dd97191d297f2ec88ef4cb04be5 SHA256 deae4cbb362bf6f02a22b758671fa9b7ef865a99da6142efd46447592fc9ce48
-EBUILD openal-1.6.372.ebuild 1079 RMD160 fa92cd3264ffd21e7224891c263c69fad3b7662a SHA1 10477225f8b4776806f8bca9a09c9e2446fb40dd SHA256 c8a46e7212d27036af1b0361923ccb147392677189a7b384e438d679f1435acf
+EBUILD openal-1.5.304.ebuild 1087 RMD160 877459893352e29cd267bda63ff3913fb1366a7d SHA1 f84cad994e6ed9d60178160c2574712baabc71d9 SHA256 ce8f0c7a7dc68e6861588b712c24776424dfe3f48d94af0b17711f89c08ff5ab
+EBUILD openal-1.6.372.ebuild 1089 RMD160 18893a738e712d1ee9a4d1b91fce9efa1498b703 SHA1 deca8c7880306aa8473f5699934bfed11e0404d2 SHA256 1f401688dc74a62ffbc696db56e1aac0ce8bc40f35a5b9a33f4274a86f0222be
 MISC ChangeLog 14373 RMD160 10e03a143656723925839d7573be67442c54fa34 SHA1 168b0c20366ab60b3870dfda4c70e7cebf8a8c82 SHA256 331f17eeeeeb4d76c49c6d1eba4a462108ea634facc11e9f2a69138f793d8764
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
